Bug 1519044 - Bug 1466782 follow-up: fix incorrect 'unread column' name. r=alta88

--HG--
extra : rebase_source : 9ea9ff2b422afbad9938aab51e4544172e70f21a